# OS2

./: CMakeLists.txt  README.md
ProgExam/: Readme.txt  design.docx  program.cpp
assignment1/: Assgn1_README_AI20BTECH11011.txt  Assgn1_Src_AI20BTECH11011.cpp  inp.txt
assignment2/: Assgn2Readme-AI20BTECH11011.txt  Assgn2SrcOpenMP-AI20BTECH11011.cpp  Assgn2Srcpthread-AI20BTECH11011.cpp  a.out  input.txt  sudokus
assignment3/: Assgn3-Readme-AI20BTECH11011.txt  Assgn3-Src-cas-AI20BTECH11011.cpp  Assgn3-Src-cas-bounded-AI20BTECH11011.cpp  Assgn3-Src-tas-AI20BTECH11011.cpp  inp-params.txt
assignment4/: Assgn4-Readme-AI20BTECH11011.txt  Assgn4-Src-AI20BTECH11011.cpp  inp-params.txt
assignment5/: readme
assignment6/: xv6_copy_on_write.tar.xz  xv6_demand_paging.tar.xz
assignment6/xv6_copy_on_write/: Makefile  defs.h  kalloc.c  myCOW.c  proc.c  sysproc.c  trap.c  user.h  usys.S  vm.c
assignment6/xv6_demand_paging/: Makefile  defs.h  mydate.c  mydemandPage.c  syscall.c  syscall.h  sysproc.c  trap.c  vm.c
