cmake_minimum_required(VERSION 3.24)
project(OS2)

set(CMAKE_CXX_STANDARD 17)

add_executable(OS2 main.cpp assignment1/Assgn1_Src_AI20BTECH11011.cpp assignment2/Assgn2Srcpthread-AI20BTECH11011.cpp assignment2/Assgn2SrcOpenMP-AI20BTECH11011.cpp assignment3/Assgn3-Src-tas-AI20BTECH11011.cpp assignment3/Assgn3-Src-cas-bounded-AI20BTECH11011.cpp assignment3/Assgn3-Src-cas-AI20BTECH11011.cpp assignment4/Assgn4-Src-AI20BTECH11011.cpp ProgExam/ProgExam.cpp ProgExam/program.cpp)
